תיקונים ושיפורים לעמוד צור קשר כולל שדה טלפון ויישור

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 			</a>
 		</li>
 		<li class="menu__item">
-			<a class="menu__link" href="/post/contact/">
+			<a class="menu__link" href="/contact/">
 				
 				<span class="menu__text">צרו קשר</span>
 				
@@ -168,33 +168,6 @@ in the documentation.</p>
 	</div>
 	<div class="list__footer clearfix">
 		<a class="list__footer-readmore btn" href="/docs/faq/">המשך קריאה…</a>
-	</div>
-</article><article class="list__item post">
-	
-	<header class="list__header">
-		<h2 class="list__title post__title">
-			<a href="/post/contact/" rel="bookmark">
-			צרו קשר
-			</a>
-		</h2>
-		
-	</header>
-	<div class="content list__excerpt post__content clearfix">
-		<hr>
-<h2 id="title-צור-קשר">title: &ldquo;צור קשר&rdquo;</h2>
-<h1 id="צור-קשר">צור קשר</h1>
-<p>אנא מלא את הטופס הבא ונחזור אליך בהקדם:</p>
-<!-- raw HTML omitted -->
-<p><!-- raw HTML omitted -->שם מלא<!-- raw HTML omitted -->
-<!-- raw HTML omitted --></p>
-<p><!-- raw HTML omitted -->אימייל<!-- raw HTML omitted -->
-<!-- raw HTML omitted --></p>
-<p><!-- raw HTML omitted -->הודעה<!-- raw HTML omitted --></p>
-<!-- raw HTML omitted -->
-<p><!-- raw HTML omitted -->שלח<!-- raw HTML omitted --></p>
-	</div>
-	<div class="list__footer clearfix">
-		<a class="list__footer-readmore btn" href="/post/contact/">המשך קריאה…</a>
 	</div>
 </article><article class="list__item post">
 	
@@ -342,8 +315,8 @@ you are reading right now.</p>
 			<li class="widget__item"><a class="widget__link" href="/post/home/">בית</a></li>
 			<li class="widget__item"><a class="widget__link" href="/docs/customization/">Customization</a></li>
 			<li class="widget__item"><a class="widget__link" href="/docs/faq/">Frequently asked questions (FAQ)</a></li>
-			<li class="widget__item"><a class="widget__link" href="/post/contact/">צרו קשר</a></li>
 			<li class="widget__item"><a class="widget__link" href="/post/social-phobia/">חרדה חברתית: מאחורי הקלעים של הפחד החברתי – זיהוי,  ואפשרויות טיפול</a></li>
+			<li class="widget__item"><a class="widget__link" href="/post/parental-authority/">סמכות הורית – למה גבולות ואהבה לילד חייבים ללכת יד ביד</a></li>
 		</ul>
 	</div>
 </div>
