--- a/public/about/index.html
+++ b/public/about/index.html
@@ -16,6 +16,8 @@
   <meta property="og:locale" content="he">
   <meta property="og:type" content="article">
 
+  
+        <link rel="stylesheet" href="/css/contact-form.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link rel="dns-prefetch" href="//fonts.gstatic.com">
@@ -84,7 +86,7 @@
 			</a>
 		</li>
 		<li class="menu__item">
-			<a class="menu__link" href="/post/contact/">
+			<a class="menu__link" href="/contact/">
 				
 				<span class="menu__text">צרו קשר</span>
 				
