תיקון בעיות בבניית דף התודה

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <meta property="og:locale" content="he">
   <meta property="og:type" content="website">
 
+  
+        <link rel="stylesheet" href="/css/contact-form.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link rel="dns-prefetch" href="//fonts.gstatic.com">
