--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 			</a>
 		</li>
 		<li class="menu__item">
-			<a class="menu__link" href="/about/">
+			<a class="menu__link" href="/post/about/">
 				
 				<span class="menu__text">אודות</span>
 				
@@ -114,7 +114,15 @@
 <p>הגישה שלי אינטגרטיבית:<br>
 אני משלב טיפול קוגניטיבי-התנהגותי (CBT), טיפול דינמי וגישות הומניסטיות – בהתאמה אישית לכל אדם ולמה שהוא עובר.</p>
 <p>במרחב בטוח, קשוב ולא שיפוטי – נמצא יחד את הדרך שנכונה לכם, בקצב שמתאים לכם.</p>
-<p><a href="">קראו עוד אודותיי</a></p>
+<p>
+
+
+
+  <a href="#" class="internal-link">
+    קראו עוד אודותיי
+  </a>
+
+</p>
 <hr>
 <h2 id="למי-אני-יכול-לעזור">למי אני יכול לעזור</h2>
 <h3 id="-מבוגרים">👨‍🦱 מבוגרים</h3>
@@ -145,11 +153,27 @@
 <h2 id="יצירת-קשר">יצירת קשר</h2>
 <p><strong>שיחת ייעוץ ראשונית ללא התחייבות:</strong><br>
 📞 <strong>054-7509962</strong><br>
-📧 <a href="mailto:amir@amireyal.co.il">amir@amireyal.co.il</a></p>
+📧 
+
+
+
+  <a href="mailto:amir@amireyal.co.il" class="internal-link">
+    amir@amireyal.co.il
+  </a>
+
+</p>
 <p>🧭 מיקום: כרמיאל והסביבה<br>
 💻 ניתן לקיים פגישות גם אונליין</p>
 <p>🕘 שעות פעילות: ראשון–חמישי, 9:00–19:00<br>
-📱 אפשר גם ב-<a href="">WhatsApp</a></p>
+📱 אפשר גם ב-
+
+
+
+  <a href="#" class="internal-link">
+    WhatsApp
+  </a>
+
+</p>
 <hr>
 <hr>
 
@@ -167,7 +191,15 @@
 	<div class="content list__excerpt post__content clearfix">
 		<h2 id="לחזור-הביתה-טיפול-רגשי">לחזור הביתה טיפול רגשי</h2>
 <p>ליווי רגשי למבוגרים, מתבגרים והורים – בגישה מקצועית, רגישה ומותאמת אישית.</p>
-<p><a href="/post/home/#%d7%99%d7%a6%d7%99%d7%a8%d7%aa-%d7%a7%d7%a9%d7%a8">לתיאום שיחת היכרות</a></p>
+<p>
+
+
+
+  <a href="#%d7%99%d7%a6%d7%99%d7%a8%d7%aa-%d7%a7%d7%a9%d7%a8" class="internal-link">
+    לתיאום שיחת היכרות
+  </a>
+
+</p>
 <hr>
 <h2 id="אודותיי">אודותיי</h2>
 <p>שלום, אני עמיר – פסיכותרפיסט מומחה בטיפול רגשי למתבגרים ולמבוגרים.<br>
@@ -327,7 +359,23 @@ in the documentation.</p>
 </div></div>
 	</header>
 	<div class="content list__excerpt post__content clearfix">
-		<p>Hugo uses the excellent <a href="https://golang.org/">Go</a> <a href="https://golang.org/pkg/html/template/">html/template</a> library for
+		<p>Hugo uses the excellent 
+
+
+
+  <a href="https://golang.org/" target="_blank" rel="noopener noreferrer" class="external-link">
+    Go
+  </a>
+
+ 
+
+
+
+  <a href="https://golang.org/pkg/html/template/" target="_blank" rel="noopener noreferrer" class="external-link">
+    html/template
+  </a>
+
+ library for
 its template engine. It is an extremely lightweight engine that provides a very
 small amount of logic. In our experience that it is just the right amount of
 logic to be able to create a good static website. If you have used other
@@ -353,21 +401,30 @@ similarities in Go templates.</p>
 	</header>
 	<div class="content list__excerpt post__content clearfix">
 		<h2 id="step-1-install-hugo">Step 1. Install Hugo</h2>
-<p>Go to <a href="https://github.com/spf13/hugo/releases">Hugo releases</a> and download the
+<p>Go to 
+
+
+
+  <a href="https://github.com/spf13/hugo/releases" target="_blank" rel="noopener noreferrer" class="external-link">
+    Hugo releases
+  </a>
+
+ and download the
 appropriate version for your OS and architecture.</p>
 <p>Save it somewhere specific as we will be using it in the next step.</p>
-<p>More complete instructions are available at <a href="https://gohugo.io/getting-started/installing/">Install Hugo</a></p>
+<p>More complete instructions are available at 
+
+
+
+  <a href="https://gohugo.io/getting-started/installing/" target="_blank" rel="noopener noreferrer" class="external-link">
+    Install Hugo
+  </a>
+
+</p>
 <h2 id="step-2-build-the-docs">Step 2. Build the Docs</h2>
 <p>Hugo has its own example site which happens to also be the documentation site
 you are reading right now.</p>
 <p>Follow the following steps:</p>
-<ol>
-<li>Clone the <a href="https://github.com/spf13/hugo">Hugo repository</a></li>
-<li>Go into the repo</li>
-<li>Run hugo in server mode and build the docs</li>
-<li>Open your browser to http://localhost:1313</li>
-</ol>
-<p>Corresponding pseudo commands:</p>
 	</div>
 	<div class="list__footer clearfix">
 		<a class="list__footer-readmore btn" href="/post/getting-started-with-hugo/">המשך קריאה…</a>
