--- a/public/404.html
+++ b/public/404.html
@@ -62,7 +62,7 @@
 			</a>
 		</li>
 		<li class="menu__item">
-			<a class="menu__link" href="/about/">
+			<a class="menu__link" href="/post/about/">
 				
 				<span class="menu__text">אודות</span>
 				
