--- a/static/admin/index.htm
+++ b/static/admin/index.htm
@@ -18,7 +18,7 @@
     window.netlifyIdentity.on("init", user => {
       if (!user) {
         window.netlifyIdentity.on("login", () => {
-          document.location.href = "/"; // לאחר התחברות - הפניה לדף הבית
+        document.location.href = "/admin";
         });
       }
     });
