הודעת קומיט המתארת את השינויים שביצעת

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
         <img class="my-logo-image" src="/img/logo.png" alt="לוגו">
       
       <div class="my-logo-text">
-        <div class="my-logo-title">עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים</div>
+        <div class="my-logo-title">מתבגרים, מבוגרים והדרכת הורים</div>
         <div class="my-logo-subtitle">כרמיאל והסביבה ואונליין</div>
       </div>
     </div>
@@ -107,7 +107,7 @@
   
   <section class="home-content">
     <div class="content main__content">
-      <h4 id="האם-אתם-מרגישים-תקועים-בתוך-מעגל-חוזר-של-מחשבות-רגשות-או-דפוסי-התנהגות">האם אתם מרגישים תקועים בתוך מעגל חוזר של מחשבות, רגשות או דפוסי התנהגות?</h4>
+      <h2 id="האם-אתם-מרגישים-תקועים-בתוך-מעגל-חוזר-של-מחשבות-רגשות-או-דפוסי-התנהגות">האם אתם מרגישים תקועים בתוך מעגל חוזר של מחשבות, רגשות או דפוסי התנהגות?</h2>
 <p>אולי אתם מתמודדים עם אתגרים ביחסים בין-אישיים, עוברים משבר, או נמצאים בעיצומו של סכסוך גירושין?
 אני כאן גם בשבילכם, ההורים, שזקוקים להדרכה ולליווי בהתמודדות עם אתגרי ההורות,
 וגם עבור בני ובנות הנוער שחווים קשיים ייחודיים לגיל ההתבגרות – אני כאן בשבילכם.</p>
@@ -127,23 +127,13 @@
 
 </p>
 <hr>
-<div class="cta-box">
-  <h2>קבע פגישה עכשיו</h2>
-  <p>השאר פרטים ואחזור אליך בהקדם לטיפול מותאם אישית.</p>
-  <a href="/contact/" class="cta-button">
-    צור קשר
-  </a>
-</div>
-
-<h2 id="למי-אני-יכול-לעזור">למי אני יכול לעזור</h2>
+<!-- raw HTML omitted -->
 <h3 id="-מבוגרים">👨‍🦱 מבוגרים</h3>
 <p>התמודדות עם קשיים רגשיים, תחושת תקיעות, דיכאון, חרדה, משברי חיים, חיפוש משמעות</p>
 <h3 id="-מתבגרים">🧑‍🎓 מתבגרים</h3>
 <p>קשיים בגיבוש זהות, דימוי עצמי נמוך, לחץ חברתי, בדידות, יחסים עם ההורים</p>
 <h3 id="-הדרכת-הורים">👪 הדרכת הורים</h3>
 <p>אתגרים רגשיים והתנהגותיים עם ילדים ובני נוער, הצבת גבולות, פיתוח שיח רגשי בבית</p>
-<blockquote>
-<p>כל גיל והאתגרים שלו – אני כאן כדי להקשיב, ללוות ולכוון בדרך שמתאימה לכם.</p></blockquote>
 <hr>
 <h2 id="איך-נראה-תהליך-העבודה">איך נראה תהליך העבודה?</h2>
 <ol>
@@ -185,6 +175,7 @@
   </a>
 
 </p>
+<!-- raw HTML omitted -->
 
     </div>
   </section>
