--- a/public/מאמרים/emotional-manipulations-in-divorce-conflicts/index.html
+++ b/public/מאמרים/emotional-manipulations-in-divorce-conflicts/index.html
@@ -95,7 +95,7 @@
         <img class="my-logo-image" src="/img/logo.png" alt="לוגו">
       
       <div class="my-logo-text">
-        <div class="my-logo-title">עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים</div>
+        <div class="my-logo-title">מתבגרים, מבוגרים והדרכת הורים</div>
         <div class="my-logo-subtitle">כרמיאל והסביבה ואונליין</div>
       </div>
     </div>
