--- a/public/index.html
+++ b/public/index.html
@@ -260,9 +260,9 @@
 		<ul class="widget__list">
 			<li class="widget__item"><a class="widget__link" href="/%D7%9E%D7%90%D7%9E%D7%A8%D7%99%D7%9D/1/">איך יודעים שהטיפול עוזר לי? סימני התקדמות במסע לשינוי וצמיחה</a></li>
 			<li class="widget__item"><a class="widget__link" href="/%D7%9E%D7%90%D7%9E%D7%A8%D7%99%D7%9D/2/">התמודדות עם מתח ולחץ: הדרך לחיים שלווים ומאוזנים</a></li>
+			<li class="widget__item"><a class="widget__link" href="/%D7%9E%D7%90%D7%9E%D7%A8%D7%99%D7%9D/%D7%A7%D7%A9%D7%99%D7%99%D7%9D-%D7%91%D7%9E%D7%A2%D7%A8%D7%9B%D7%95%D7%AA-%D7%99%D7%97%D7%A1%D7%99%D7%9D-%D7%90%D7%99%D7%9A-%D7%9C%D7%A0%D7%95%D7%95%D7%98-%D7%91%D7%90%D7%AA%D7%92%D7%A8%D7%99%D7%9D-%D7%95%D7%9C%D7%A6%D7%9E%D7%95%D7%97-%D7%99%D7%97%D7%93/">קשיים במערכות יחסים: איך לנווט באתגרים ולצמוח יחד</a></li>
 			<li class="widget__item"><a class="widget__link" href="/%D7%9E%D7%90%D7%9E%D7%A8%D7%99%D7%9D/specific-phobia/"> מהי פוביה ספציפית וכיצד מטפלים?</a></li>
 			<li class="widget__item"><a class="widget__link" href="/%D7%9E%D7%90%D7%9E%D7%A8%D7%99%D7%9D/emotional-manipulations-in-divorce-conflicts/">מניפולציות רגשיות בסכסוכי גירושין: לזהות, להבין ולהתמודד</a></li>
-			<li class="widget__item"><a class="widget__link" href="/%D7%9E%D7%90%D7%9E%D7%A8%D7%99%D7%9D/mindfulness/">  מיינדפולנס: לחיות בנוכחות של הרגע הזה </a></li>
 		</ul>
 	</div>
 </div>
@@ -271,17 +271,11 @@
 	<div class="widget__content">
 		<ul class="widget__list">
 			<li class="widget__item">
+				<a class="widget__link" href="/categories/-%D7%A4%D7%A1%D7%99%D7%9B%D7%95%D7%AA%D7%A8%D7%A4%D7%99%D7%94/">-פסיכותרפיה</a></li>
+			<li class="widget__item">
 				<a class="widget__link" href="/categories/%D7%91%D7%A8%D7%99%D7%90%D7%95%D7%AA-%D7%94%D7%A0%D7%A4%D7%A9/">בריאות הנפש</a></li>
 			<li class="widget__item">
 				<a class="widget__link" href="/categories/%D7%94%D7%93%D7%A8%D7%9B%D7%AA-%D7%94%D7%95%D7%A8%D7%99%D7%9D/">הדרכת הורים</a></li>
-			<li class="widget__item">
-				<a class="widget__link" href="/categories/%D7%98%D7%99%D7%A4%D7%95%D7%9C-%D7%91%D7%9E%D7%91%D7%95%D7%92%D7%A8%D7%99%D7%9D/">טיפול במבוגרים</a></li>
-			<li class="widget__item">
-				<a class="widget__link" href="/categories/%D7%98%D7%99%D7%A4%D7%95%D7%9C-%D7%9C%D7%9E%D7%91%D7%95%D7%92%D7%A8%D7%99%D7%9D/">טיפול למבוגרים</a></li>
-			<li class="widget__item">
-				<a class="widget__link" href="/categories/%D7%98%D7%99%D7%A4%D7%95%D7%9C-%D7%A8%D7%92%D7%A9%D7%99/">טיפול רגשי</a></li>
-			<li class="widget__item">
-				<a class="widget__link" href="/categories/%D7%9E%D7%91%D7%95%D7%92%D7%A8%D7%99%D7%9D/">מבוגרים</a></li>
 			<li class="widget__item">
 				<a class="widget__link" href="/categories/%D7%9E%D7%AA%D7%91%D7%92%D7%A8%D7%99%D7%9D/">מתבגרים</a></li>
 			<li class="widget__item">
