תיאור השינויים שדחפתי

--- a/public/pages/thank-you/index.html
+++ b/public/pages/thank-you/index.html
@@ -99,6 +99,18 @@
   </a>
 </div>
 
+  <section class="hero-section" style="background-image: url('/img/hero.webp');">
+    <div class="hero-content">
+        <h1>כל שינוי מתחיל בצעד קטן אחד</h1>
+        <p class="subtitle">קבע פגישה ראשונה עכשיו</p>
+        <div class="hero-buttons">
+            <a href="tel:(054)750-9962" class="button button-primary">התקשר 054-750-9962</a>
+            <a href="pages/contact" class="button button-secondary">קבע פגישה ראשונה עכשיו</a>
+        </div>
+        <p class="hero-description">Compassionate therapy and psychiatry services, available in-person and online across Texas.</p>
+    </div>
+</section>
+ 
   </div>
 </header>
 
