תיאור השינויים שלך כאן

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -40,7 +40,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/custom-menu.min.3bc723122191482bd6a46a3a970caa53992985625d834d925f5379ff0535efaf.css" integrity="sha256-O8cjEiGRSCvWpGo6lwyqU5kphWJdg02SX1N5/wU1768=">
+  <link rel="stylesheet" href="/css/custom-menu.min.2eef289aea76c2d7ebd7232b06792977e23e7630772e599dc1ad59ab45787328.css" integrity="sha256-Lu8omup2wtfr1yMrBnkpd&#43;I&#43;djB3Llmdwa1Zq0V4cyg=">
 
   <link rel="shortcut icon" href="/favicon.ico" />
     
@@ -75,8 +75,8 @@
   
 <header class="custom-site-header">
     <div class="custom-top-bar">
-                       <a href="tel:323-555-6463" class="custom-call-button">Call Now! (323) 555-6463</a>
-        <a href="/book-appointment" class="custom-appointment-button">Book An Appointment</a>
+                       <a href="tel:054-7509962" class="custom-call-button">התקשרו  054-750-9962</a>
+        <a href="/contact/" class="custom-appointment-button">שלחו לי הודעה </a>
     </div>
 
     <div class="custom-main-header">
