--- a/public/404.html
+++ b/public/404.html
@@ -40,7 +40,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/custom-menu.min.30d1b41eb354294f038b3f0d7380f27e86249b9c54787a5ae679c386e9628a60.css" integrity="sha256-MNG0HrNUKU8Diz8Nc4DyfoYkm5xUeHpa5nnDhuliimA=">
+  <link rel="stylesheet" href="/css/custom-menu.min.2eef289aea76c2d7ebd7232b06792977e23e7630772e599dc1ad59ab45787328.css" integrity="sha256-Lu8omup2wtfr1yMrBnkpd&#43;I&#43;djB3Llmdwa1Zq0V4cyg=">
 
   <link rel="shortcut icon" href="/favicon.ico" />
     
@@ -75,8 +75,8 @@
   
 <header class="custom-site-header">
     <div class="custom-top-bar">
-                       <a href="tel:323-555-6463" class="custom-call-button">Call Now! (323) 555-6463</a>
-        <a href="/book-appointment" class="custom-appointment-button">Book An Appointment</a>
+                       <a href="tel:054-7509962" class="custom-call-button">התקשרו  054-750-9962</a>
+        <a href="/contact/" class="custom-appointment-button">שלחו לי הודעה </a>
     </div>
 
     <div class="custom-main-header">
