--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/custom-menu.min.30d1b41eb354294f038b3f0d7380f27e86249b9c54787a5ae679c386e9628a60.css" integrity="sha256-MNG0HrNUKU8Diz8Nc4DyfoYkm5xUeHpa5nnDhuliimA=">
+  <link rel="stylesheet" href="/css/custom-menu.min.2eef289aea76c2d7ebd7232b06792977e23e7630772e599dc1ad59ab45787328.css" integrity="sha256-Lu8omup2wtfr1yMrBnkpd&#43;I&#43;djB3Llmdwa1Zq0V4cyg=">
 
   <link rel="shortcut icon" href="/favicon.ico" />
     
@@ -77,8 +77,8 @@
   
 <header class="custom-site-header">
     <div class="custom-top-bar">
-                       <a href="tel:323-555-6463" class="custom-call-button">Call Now! (323) 555-6463</a>
-        <a href="/book-appointment" class="custom-appointment-button">Book An Appointment</a>
+                       <a href="tel:054-7509962" class="custom-call-button">התקשרו  054-750-9962</a>
+        <a href="/contact/" class="custom-appointment-button">שלחו לי הודעה </a>
     </div>
 
     <div class="custom-main-header">
@@ -148,12 +148,12 @@
 <section class="hero-section">
     <div class="hero-content">
         <h1>כל שינוי מתחיל בצעד קטן אחד</h1>
-        <p class="subtitle">קבע פגישה ראשונה עכשיו</p>
+        <p class="subtitle">פסיכותרפיה לבוגרים ‖ טיפול במתבגרים ‖ הדרכת הורים</p>
         <div class="hero-buttons">
-            <a href="tel:(054)750-9962" class="button button-primary">התקשר 054-750-9962</a>
-            <a href="pages/contact" class="button button-secondary">קבע פגישה ראשונה עכשיו</a>
+            <a href="tel:(054)750-9962" class="button button-primary">התקשרו  054-750-9962</a>
+            <a href="pages/contact" class="button button-secondary">קבעו פגישה ראשונה עכשיו</a>
         </div>
-        <p class="hero-description">Compassionate therapy and psychiatry services, available in-person and online across Texas.</p>
+        <p class="hero-description">טיפול פסיכותרפיה על ידי מטפל רגשי מוסמך בכרמיאל, הסביבה ואונליין</p>
     </div>
 </section>
 
