--- a/public/מאמרים/הורות-בעידן-המסכים-כלים-להצבת-גבולות-ושימוש-מושכל/index.html
+++ b/public/מאמרים/הורות-בעידן-המסכים-כלים-להצבת-גבולות-ושימוש-מושכל/index.html
@@ -12,7 +12,7 @@
   <meta property="og:site_name" content="עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים">
   <meta property="og:title" content=" הורות בעידן המסכים: כלים להצבת גבולות ושימוש מושכל">
   <meta property="og:description" content="הבנת עולם המסכים והשפעותיו “עידן המסכים” מתייחס לתקופה בה מכשירים דיגיטליים – כמו סמארטפונים, טאבלטים, מחשבים וטלוויזיות חכמות – הפכו לחלק בלתי נפרד מחיי היומיום שלנו, ובמיוחד מחיי ילדינו. השימוש בהם מציע יתרונות רבים, כמו גישה למידע, למידה אינטראקטיבית וחיבור חברתי, אך טומן בחובו גם אתגרים משמעותיים.
-הבעיה אינה קשורה רק לזמן המסך עצמו, אלא גם לתוכן אליו נחשפים הילדים ולהקשר שבו נעשה השימוש. שימוש מופרז או לא מבוקר עלול להוביל לסימפטומים כמו קשיי ריכוז, ירידה בהישגים לימודיים, הפרעות שינה, התפתחות איטית של כישורים חברתיים, חרדה, עצבנות, ולעיתים אף לנטייה להתמכרות. לדוגמה, ילד שמתקשה לקיים שיחה פרונטלית או משתמש במסכים כבריחה ממצבים חברתיים, עלול לחוות קושי בפיתוח אמפתיה וכישורי פתרון קונפליקטים. מתבגרים עשויים לחוות לחץ חברתי מוגבר כתוצאה מחשיפה מתמדת לדימויים לא מציאותיים ברשתות חברתיות, ולפתח דימוי גוף שלילי או חרדה חברתית.">
+הבעיה אינה קשורה רק לזמן המסך עצמו, אלא גם לתוכן אליו נחשפים הילדים ולהקשר שבו נעשה השימוש. שימוש מופרז או לא מבוקר עלול להוביל לסימפטומים כמו קשיי ריכוז, ירידה בהישגים לימודיים, הפרעות שינה, התפתחות איטית של כישורים חברתיים, חרדה, עצבנות, ולעיתים אף לנטייה להתמכרות.">
   <meta property="og:locale" content="he">
   <meta property="og:type" content="article">
     <meta property="article:section" content="מאמרים">
