--- a/public/מאמרים/סכסוך-גירושים-כשהילדים-באמצע-מה-שכל-הורה-חייב-לדעת-כדי-להתמודד-נכון/index.html
+++ b/public/מאמרים/סכסוך-גירושים-כשהילדים-באמצע-מה-שכל-הורה-חייב-לדעת-כדי-להתמודד-נכון/index.html
@@ -175,7 +175,8 @@
             <p>הורים פרודים או גרושים נתקלים לעיתים קרובות בקונפליקטים מתישים, הכוללים דפוסי <strong>השפעה רגשית סמויה</strong> המזיקים לכל המעורבים, ובמיוחד לילדים. המאמר מספק כלים לזיהוי דפוסים אלו, הבנת השפעתם הרגשית, ולימוד דרכי התמודדות יעילות כמו <strong>תיעוד אירועים</strong>, <strong>הצבת גבולות</strong> והגנה על הילד, ובכלל זה שימוש ב<strong>טכניקת &ldquo;הסלע האפור&rdquo;</strong> – כל זאת במטרה לשמור על יציבות נפשית וסביבה בטוחה.</p>
 <h2 id="מהי-השפעה-רגשית-סמויה">מהי השפעה רגשית סמויה?</h2>
 <blockquote>
-<p><strong>השפעה רגשית סמויה</strong> היא תהליך שבו אדם מבקש להשפיע על רגשותיו, מחשבותיו או התנהגותו של אחר – לעיתים באופן לא מודע – כדי לקדם צרכים או מטרות אישיות. במסגרת הורות משותפת, דפוסים כאלה עשויים להתבטא בניסיון לעצב את עמדותיו של הילד ביחס להורה השני, ולעיתים להשפיע על החלטות או קשרים בתוך המערכת המשפחתית.</p></blockquote>
+<p><strong>השפעה רגשית סמויה</strong> היא תהליך שבו אדם מבקש להשפיע על רגשותיו, מחשבותיו או התנהגותו של אחר – לעיתים באופן לא מודע – כדי לקדם צרכים או מטרות אישיות. במסגרת הורות משותפת, דפוסים כאלה עשויים להתבטא בניסיון לעצב את עמדותיו של הילד ביחס להורה השני, ולעיתים להשפיע על החלטות או קשרים בתוך המערכת המשפחתית.</p>
+</blockquote>
 <p>במצבים אלה, ייתכן שיופיעו דפוסים כגון:</p>
 <h3 id="הפעלת-רגשות-אשם">הפעלת רגשות אשם</h3>
 <p><strong>הפעלת רגשות אשם</strong> היא יצירת תחושת כשל או אשמה אצל ההורה השני, למשל סביב ההורות שלו או יכולתו לספק מענה רגשי לילד.</p>
@@ -218,7 +219,8 @@
 </ul>
 <h2 id="הסלע-האפור--טכניקת-ויסות-מול-דינמיקה-רגשית-טעונה">הסלע האפור – טכניקת ויסות מול דינמיקה רגשית טעונה</h2>
 <blockquote>
-<p>בתוך מצבים של תקשורת מאתגרת עם הורה אחר, שבו מופיעים דפוסים של מניפולציה רגשית או ניסיון לשליטה באמצעות פרובוקציות, <strong>טכניקת הסלע האפור (Grey Rock Method)</strong> מציעה גישה שמטרתה הפחתת מעורבות רגשית ושמירה על גבולות פנימיים. זוהי טכניקה פשוטה למראה, אך דורשת תרגול רגשי ויכולת לווסת תגובות פנימיות, בעיקר במצבים שבהם מתעורר רצון להגיב, להסביר או להתגונן.</p></blockquote>
+<p>בתוך מצבים של תקשורת מאתגרת עם הורה אחר, שבו מופיעים דפוסים של מניפולציה רגשית או ניסיון לשליטה באמצעות פרובוקציות, <strong>טכניקת הסלע האפור (Grey Rock Method)</strong> מציעה גישה שמטרתה הפחתת מעורבות רגשית ושמירה על גבולות פנימיים. זוהי טכניקה פשוטה למראה, אך דורשת תרגול רגשי ויכולת לווסת תגובות פנימיות, בעיקר במצבים שבהם מתעורר רצון להגיב, להסביר או להתגונן.</p>
+</blockquote>
 <h3 id="כיצד-זה-פועל">כיצד זה פועל?</h3>
 <ul>
 <li><strong>שימור נוכחות רגועה ולא ריאקטיבית (תגובתית):</strong> במקום להיגרר לעימות רגשי או להיכנס למעגל של תגובות – שומרים על תגובה שקולה, לקונית, וללא מטען רגשי. ניסוחים כמו &ldquo;אין לי מה להוסיף&rdquo;, &ldquo;אוקיי&rdquo;, או &ldquo;אני מבין שזו דעתך&rdquo; יכולים להיות אפקטיביים.</li>
