--- a/public/pages/about/index.html
+++ b/public/pages/about/index.html
@@ -202,7 +202,8 @@
 <li><strong>מתבגרים</strong> שמרגישים בלבול, קושי להשתלב, וחיפוש אחר מי שהם.</li>
 </ul>
 <blockquote>
-<p>אם אתם או ילדיכם מרגישים תקועים בתוך מעגל חוזר של מחשבות, רגשות או התנהגויות – אני כאן בשבילכם.</p></blockquote>
+<p>אם אתם או ילדיכם מרגישים תקועים בתוך מעגל חוזר של מחשבות, רגשות או התנהגויות – אני כאן בשבילכם.</p>
+</blockquote>
 <hr>
 <h2 id="איך-נראה-הטיפול-ומהי-הגישה-שלי">איך נראה הטיפול ומהי הגישה שלי?</h2>
 <p>לרוב זו שיחה בגובה העיניים – עמוקה, מכוונת, ונוגעת בדיוק בנקודות שבהן נדרש שינוי.<br>
@@ -212,7 +213,8 @@
 בנוסף, אני משלב גישות של טיפול בהתמכרויות, טיפול קבוצתי ועבודה עם היבטים של זהות והתפתחות אישית.<br>
 כל זאת, מתוך התאמה אישית לכל אדם ולמה שהוא עובר.</p>
 <blockquote>
-<p>במרחב טיפולי בטוח, קשוב ולא שיפוטי – נמצא יחד את הדרך הנכונה לכם או לילדיכם, בקצב שמתאים לכם.</p></blockquote>
+<p>במרחב טיפולי בטוח, קשוב ולא שיפוטי – נמצא יחד את הדרך הנכונה לכם או לילדיכם, בקצב שמתאים לכם.</p>
+</blockquote>
 <hr>
 <h2 id="מה-אני-מביא-איתי">מה אני מביא איתי?</h2>
 <p>מעבר להכשרה מקצועית רחבה –<br>
@@ -226,14 +228,16 @@
 צברתי ניסיון קליני עשיר בסיוע במגוון רחב של קשיים –<br>
 החל מחרדה ודיכאון, דרך אתגרים רגשיים מורכבים ועד שינוי הרגלים שאינם משרתים אתכם.</p>
 <blockquote>
-<p>ראיתי שוב ושוב איך דווקא המקום שבו נותנים מקום אמיתי לכאב ולתקווה – הוא המקום שבו דברים מתחילים להשתנות.</p></blockquote>
+<p>ראיתי שוב ושוב איך דווקא המקום שבו נותנים מקום אמיתי לכאב ולתקווה – הוא המקום שבו דברים מתחילים להשתנות.</p>
+</blockquote>
 <hr>
 <h2 id="הצעד-הבא">הצעד הבא</h2>
 <p>טיפול טוב נולד ממפגש אמיתי, פשוט ונוכח.<br>
 כזה שנותן תחושת ביטחון – לדעת שיש מישהו איתכם.<br>
 לא כדי &ldquo;לתקן&rdquo; אתכם, אלא כדי ללכת איתכם בדרך לגילוי ולריפוי.</p>
 <blockquote>
-<p>אם יש משהו בפנים שאומר <em>&ldquo;אולי הגיע הזמן&rdquo;</em> – כנראה שאתם צודקים.</p></blockquote>
+<p>אם יש משהו בפנים שאומר <em>&ldquo;אולי הגיע הזמן&rdquo;</em> – כנראה שאתם צודקים.</p>
+</blockquote>
 <p>
 
 
