--- a/public/מאמרים/emotional-manipulations-in-divorce-conflicts/index.html
+++ b/public/מאמרים/emotional-manipulations-in-divorce-conflicts/index.html
@@ -189,7 +189,8 @@
             <p>הימצאות בהליכי גירושין היא חוויה מטלטלת ומאתגרת, רגשית ונפשית. בתוך סערת הרגשות הזו, לא אחת צפה תופעה מכאיבה במיוחד: מניפולציה רגשית. כאשר אחד ההורים (ולפעמים שניים) משתמש בילדים או בבן/בת הזוג לשעבר ככלי במאבק, הנזק הנפשי עלול להיות עמוק ומתמשך. כדי להתמודד עם מצב כזה באופן מיטיב, חשוב להבין לעומק מהי מניפולציה רגשית, לזהות את ביטוייה בחיי היומיום, ולרכוש כלים מעשיים שיסייעו בהגנה על בריאותכם הנפשית – ובעיקר על רווחת ילדיכם.</p>
 <h2 id="מהי-מניפולציה-רגשית-בהקשר-של-גירושין">מהי מניפולציה רגשית בהקשר של גירושין?</h2>
 <blockquote>
-<p><strong>מניפולציה רגשית</strong> היא ניסיון שיטתי, לרוב סמוי ולא ישיר, להשפיע על רגשות, מחשבות והתנהגות של אדם אחר, במטרה להשיג שליטה, כוח או יתרון אישי. בסכסוכי גירושין, מניפולציות אלו מכוונות לרוב לפגוע בהורה השני, להשיג יתרונות משפטיים או כלכליים, או לערער את הקשר של הילדים עם ההורה האחר. המניפולטור משחק על רגשות חזקים כמו אשמה, פחד, רחמים, כעס, בלבול וחוסר אונים, במטרה להטות את המצב לטובתו.</p></blockquote>
+<p><strong>מניפולציה רגשית</strong> היא ניסיון שיטתי, לרוב סמוי ולא ישיר, להשפיע על רגשות, מחשבות והתנהגות של אדם אחר, במטרה להשיג שליטה, כוח או יתרון אישי. בסכסוכי גירושין, מניפולציות אלו מכוונות לרוב לפגוע בהורה השני, להשיג יתרונות משפטיים או כלכליים, או לערער את הקשר של הילדים עם ההורה האחר. המניפולטור משחק על רגשות חזקים כמו אשמה, פחד, רחמים, כעס, בלבול וחוסר אונים, במטרה להטות את המצב לטובתו.</p>
+</blockquote>
 <h2 id="איך-מזהים-מניפולציות-רגשיות-נפוצות-בגירושין">איך מזהים מניפולציות רגשיות נפוצות בגירושין?</h2>
 <p>כדי שתוכלו לזהות טוב יותר את הדפוסים הללו ולהתגונן מפניהם, הנה כמה דוגמאות נפוצות למניפולציות רגשיות שאולי נתקלתם בהן או שתיתקלו:</p>
 <h3 id="שימוש-בילדים-כשליחים-או-כלי-מיקוח">שימוש בילדים כשליחים או כלי מיקוח:</h3>
@@ -199,46 +200,55 @@
 <li>&ldquo;תגיד/י לאמא/אבא שאני לא מסכים/ה לשלם על החוג הזה, כי אבא/אמא לא משלם/ת לי מספיק מזונות.&rdquo;
 כאן, הילד הופך לשליח למסרים כלכליים ומבוגרים, ונחשף ללחצים מיותרים.</li>
 </ul>
+<!-- raw HTML omitted -->
 <ul>
 <li>&ldquo;אם לא תעשה/י מה שאני רוצה, אז לא תראה/י את הילדים בסוף השבוע.&rdquo;
 זהו שימוש בוטה בזמן השהות עם הילדים כעונש או פרס.</li>
-</ul></blockquote>
+</ul>
+</blockquote>
 <h3 id="העברת-מסרים-סותרים-או-יצירת-בלבול">העברת מסרים סותרים או יצירת בלבול:</h3>
 <p>המטרה היא לגרום לכם לפקפק במציאות או בזכרונכם.</p>
 <blockquote>
 <ul>
 <li>הורה אחד מסכים לתוכנית שהות מסוימת בטלפון, אך לאחר מכן מכחיש זאת בכתב וטוען שההורה השני משקר.</li>
-</ul></blockquote>
+</ul>
+</blockquote>
 <h3 id="האשמה-והטלת-רגשות-אשם">האשמה והטלת רגשות אשם:</h3>
 <p>טקטיקה זו מכוונת לפגוע בביטחונכם העצמי ולגרום לכם להרגיש רע.</p>
 <blockquote>
 <ul>
 <li>&ldquo;בגללך הילדים סובלים, אם היית משתף/ת פעולה, הכל היה נראה אחרת.&rdquo;</li>
 </ul>
+<!-- raw HTML omitted -->
 <ul>
 <li>&ldquo;אני כל כך סובל/ת בגלל הגירושין, הילדים צריכים להיות איתי יותר כדי לעודד אותי.&rdquo;</li>
-</ul></blockquote>
+</ul>
+</blockquote>
 <h3 id="שליטה-כלכלית-או-רגשית">שליטה כלכלית או רגשית:</h3>
 <p>מניפולציה זו מנצלת את התלות שלכם או של הילדים כדי להשיג דרישות לא קשורות.</p>
 <blockquote>
 <ul>
 <li>הורה מאיים להפסיק לשלם עבור צרכים חיוניים של הילדים (חוגים, בגדים), אלא אם ההורה השני יסכים לדרישותיו הלא סבירות.</li>
 </ul>
+<!-- raw HTML omitted -->
 <ul>
 <li>הורה מסרב לחתום על מסמכים חיוניים (כמו דרכון) עד שההורה השני ייכנע לדרישות לא קשורות כלל.</li>
-</ul></blockquote>
+</ul>
+</blockquote>
 <h3 id="שליטה-במידע">שליטה במידע:</h3>
 <p>הסתרת מידע חשוב היא כלי נוסף לשליטה.</p>
 <blockquote>
 <ul>
 <li>הורה מסרב למסור מידע על בריאות הילד או על אירועים חשובים בבית הספר, כדי לשמור על בלעדיות או כוח.</li>
-</ul></blockquote>
+</ul>
+</blockquote>
 <h3 id="גזלייטינג-gaslighting">&ldquo;גזלייטינג&rdquo; (Gaslighting):</h3>
 <blockquote>
 <p><strong>גזלייטינג</strong> הוא סוג של מניפולציה פסיכולוגית בה המניפולטור גורם לקורבן לפקפק בשפיותו, בזיכרונו או בתפיסת המציאות שלו, כדי לערער את ביטחונו העצמי ולהשיג עליו שליטה.</p>
 <ul>
 <li>&ldquo;אתה/את מדמיין/ת דברים, זה לא קרה מעולם,&rdquo; או &ldquo;אתה/את תמיד מגזים/ה.&rdquo;</li>
-</ul></blockquote>
+</ul>
+</blockquote>
 <h2 id="ההשפעות-של-מניפולציות-רגשיות-על-ההורים-והילדים">ההשפעות של מניפולציות רגשיות על ההורים והילדים</h2>
 <p>מניפולציות רגשיות אינן נשארות בחלל ריק. הן גובות מחיר כבד מכל המעורבים:</p>
 <h3 id="על-ההורים">על ההורים:</h3>
@@ -251,20 +261,24 @@
 <p>בנוסף לכך, אני מציע <strong>הדרכת הורים</strong>, במיוחד להורים הנמצאים בקונפליקט, כדי לסייע להם להגן על ילדיהם ולהתמודד נכון עם האתגרים הייחודיים של הורות בנפרד.</p>
 <h2 id="למה-לבחור-דווקא-בטיפול-אצלי">למה לבחור דווקא בטיפול אצלי?</h2>
 <blockquote>
-<p>אני מציע גישה טיפולית משולבת, המשלבת עומק דינמי וכלים מעשיים, במטרה לחזק את הכוחות הפנימיים שלכם ולבנות חיים יציבים יותר עבורכם ועבור ילדיכם. ההתמחויות שלי כוללות <strong>חרדה, דיכאון, קשיי תקשורת, משברי חיים, טיפול בילדים ונוער, והדרכת הורים בקונפליקט</strong>, ומאפשרות מענה מותאם אישית לכל אחד.</p></blockquote>
+<p>אני מציע גישה טיפולית משולבת, המשלבת עומק דינמי וכלים מעשיים, במטרה לחזק את הכוחות הפנימיים שלכם ולבנות חיים יציבים יותר עבורכם ועבור ילדיכם. ההתמחויות שלי כוללות <strong>חרדה, דיכאון, קשיי תקשורת, משברי חיים, טיפול בילדים ונוער, והדרכת הורים בקונפליקט</strong>, ומאפשרות מענה מותאם אישית לכל אחד.</p>
+</blockquote>
 <h2 id="שאלות-נפוצות-וחששות-faq">שאלות נפוצות וחששות (FAQ)</h2>
 <p><strong>שאלה:</strong> האם ניתן להתמודד עם מניפולציות בלי עזרת עורך דין?
 <strong>תשובה:</strong></p>
 <blockquote>
-<p>לעיתים קרובות, במקרים של מניפולציות קשות, עורך דין מומחה לדיני משפחה הוא חיוני להגנה על זכויותיכם ועל טובת הילדים, במיוחד כשמדובר בהליכים משפטיים. הטיפול הפסיכולוגי תומך בהתמודדות הרגשית במקביל לתהליך המשפטי.</p></blockquote>
+<p>לעיתים קרובות, במקרים של מניפולציות קשות, עורך דין מומחה לדיני משפחה הוא חיוני להגנה על זכויותיכם ועל טובת הילדים, במיוחד כשמדובר בהליכים משפטיים. הטיפול הפסיכולוגי תומך בהתמודדות הרגשית במקביל לתהליך המשפטי.</p>
+</blockquote>
 <p><strong>שאלה:</strong> מה אם ההורה המניפולטור מסרב לשתף פעולה בטיפול משפחתי?
 <strong>תשובה:</strong></p>
 <blockquote>
-<p>גם אם ההורה השני אינו משתף פעולה, טיפול אישי יכול לחזק אתכם, לספק לכם כלים להתמודדות עצמאית ולהגן על עצמכם ועל ילדיכם מפני ההשפעות המזיקות של המניפולציות. חשוב לזכור שאתם יכולים לשנות את התגובה שלכם, גם אם אינכם יכולים לשנות את האחר.</p></blockquote>
+<p>גם אם ההורה השני אינו משתף פעולה, טיפול אישי יכול לחזק אתכם, לספק לכם כלים להתמודדות עצמאית ולהגן על עצמכם ועל ילדיכם מפני ההשפעות המזיקות של המניפולציות. חשוב לזכור שאתם יכולים לשנות את התגובה שלכם, גם אם אינכם יכולים לשנות את האחר.</p>
+</blockquote>
 <p><strong>שאלה:</strong> איך אוכל להגן על הילדים שלי בצורה הטובה ביותר?
 <strong>תשובה:</strong></p>
 <blockquote>
-<p>הגנה על הילדים היא בראש סדר העדיפויות. הימנעו מלשתף אותם בפרטי הסכסוך, חזקו את תחושת הביטחון שלהם, ועודדו אותם לדבר על רגשותיהם בסביבה תומכת ולא שיפוטית. במקרים מסוימים, ייתכן שטיפול פרטני לילדים יהיה מועיל מאוד.</p></blockquote>
+<p>הגנה על הילדים היא בראש סדר העדיפויות. הימנעו מלשתף אותם בפרטי הסכסוך, חזקו את תחושת הביטחון שלהם, ועודדו אותם לדבר על רגשותיהם בסביבה תומכת ולא שיפוטית. במקרים מסוימים, ייתכן שטיפול פרטני לילדים יהיה מועיל מאוד.</p>
+</blockquote>
 <h2 id="אל-תישארו-לבד-עם-הקושי">אל תישארו לבד עם הקושי</h2>
 <p>התמודדות עם מניפולציות רגשיות בסכסוכי גירושין היא מורכבת ומתישה. אתם לא צריכים לעבור את זה לבד. פנייה לעזרה מקצועית, בין אם של עורך דין מומחה, מטפל פסיכולוגי או יועץ רגשי, היא צעד של אומץ ודאגה לעצמכם ולילדיכם. זכרו, יש לכם את הכוחות להתמודד, ובעזרת הכלים הנכונים והתמיכה המתאימה, תוכלו להפחית את הכאב, להגן על ילדיכם ולבנות לעצמכם ולילדיכם עתיד יציב ובטוח יותר.</p>
 <p><strong>הצעד הראשון לשינוי מתחיל בפנייה שלכם.</strong></p>
