--- a/public/מאמרים/קשיים-במערכות-יחסים-איך-לנווט-באתגרים-ולצמוח-יחד/index.html
+++ b/public/מאמרים/קשיים-במערכות-יחסים-איך-לנווט-באתגרים-ולצמוח-יחד/index.html
@@ -12,7 +12,7 @@
   <meta property="og:site_name" content="עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים">
   <meta property="og:title" content="קשיים במערכות יחסים: איך לנווט באתגרים ולצמוח יחד">
   <meta property="og:description" content="כמה פעמים מצאתם את עצמכם מרגישים לבד בתוך זוגיות, מתוסכלים מחוסר תקשורת, או תוהים אם “זהו, זה הסוף” של מערכת יחסים שהייתה פעם מקור לאושר? מערכות יחסים, בין אם רומנטיות, משפחתיות או חבריות, הן ליבת הקיום האנושי, אך הן גם זירה לאתגרים מורכבים.
-לעיתים נדמה שהקשר שנועד להיות מקור לכוח ולשמחה הופך למעמסה, למקור לכאב או לחוסר הבנה. במאמר זה, נצלול לעומקם של הקשיים הללו, ננסה להבין את שורשיהם ונציע דרכים מעשיות להתמודד איתם. אם אתם חווים קשיים בקשרים משמעותיים בחייכם, אתם לא לבד. המאמר יספק לכם תובנות וכלים שיסייעו לכם להבין טוב יותר את הדינמיקות המורכבות ולהתחיל לסלול את הדרך לחיבור עמוק ובריא יותר.">
+לעיתים נדמה שהקשר שנועד להיות מקור לכוח ולשמחה הופך למעמסה, למקור לכאב או לחוסר הבנה. במאמר זה, נצלול לעומקם של הקשיים הללו, ננסה להבין את שורשיהם ונציע דרכים מעשיות להתמודד איתם.">
   <meta property="og:locale" content="he">
   <meta property="og:type" content="article">
     <meta property="article:section" content="מאמרים">
@@ -199,7 +199,8 @@
 <li><strong>ציפיות לא מציאותיות</strong>: האמונה שהצד השני ימלא את כל הצרכים והרצונות, או שהקשר צריך להיות ללא מאמץ או חיכוכים.</li>
 </ul>
 <blockquote>
-<p>דוגמה: זוג שמתקשה להסכים על חלוקת המטלות בבית, וכל שיחה בנושא גולשת לצעקות והאשמות – מה שמוביל לתסכול מתמשך ולטינה.</p></blockquote>
+<p>דוגמה: זוג שמתקשה להסכים על חלוקת המטלות בבית, וכל שיחה בנושא גולשת לצעקות והאשמות – מה שמוביל לתסכול מתמשך ולטינה.</p>
+</blockquote>
 <hr>
 <h2 id="גורמים-ואתגרים">גורמים ואתגרים</h2>
 <p>קשיים במערכות יחסים אינם מופיעים בוואקום. הם נובעים לרוב משילוב של גורמים אישיים, זוגיים וסביבתיים:</p>
@@ -211,7 +212,8 @@
 <li><strong>השפעות חיצוניות</strong>: משפחות מוצא מתערבות, לחצים חברתיים, השפעת המדיה החברתית.</li>
 </ul>
 <blockquote>
-<p>האתגר המרכזי: לזהות את הגורמים ולהסכים לעבוד עליהם יחד, במקום להאשים זה את זה.</p></blockquote>
+<p>האתגר המרכזי: לזהות את הגורמים ולהסכים לעבוד עליהם יחד, במקום להאשים זה את זה.</p>
+</blockquote>
 <hr>
 <h2 id="פתרונות-וכלים-מעשיים">פתרונות וכלים מעשיים</h2>
 <p>גם כשהדרך נראית קשה, ישנם כלים ואסטרטגיות שיכולים לחולל שינוי:</p>
@@ -253,7 +255,8 @@
 <li>חזרתיות מזיקה בדפוסים</li>
 </ul>
 <blockquote>
-<p><strong>טיפול פסיכולוגי או זוגי</strong> יכול לספק כלים, הבנה חדשה, ומרחב בטוח להתמודד יחד עם הקשיים.</p></blockquote>
+<p><strong>טיפול פסיכולוגי או זוגי</strong> יכול לספק כלים, הבנה חדשה, ומרחב בטוח להתמודד יחד עם הקשיים.</p>
+</blockquote>
 <hr>
 <h2 id="סיכום-וקריאה-לפעולה">סיכום וקריאה לפעולה</h2>
 <p>קשיים במערכות יחסים הם חלק בלתי נפרד מהחיים – אך הם גם הזדמנות לצמיחה.<br>
