--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -3,7 +3,7 @@
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 <meta charset="utf-8">
-<title>עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים | </title>
+<title>עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים | Contact</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="language" content="he">
 <meta name="robots" content="index, follow">
@@ -50,18 +50,18 @@
 
 
 <meta property="og:site_name" content="עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים" />
-<meta property="og:title" content=" | עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים" />
+<meta property="og:title" content="Contact | עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://localhost:1313/contact/" />
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:title" content="">
+<meta property="twitter:title" content="Contact">
 
 
 <meta property="og:image" content="https://amireyal.co.il/images/og-image.png">
 
-<meta name="description" content="נא מלאו את הפרטים ונחזור אליכם בהקדם האפשרי" />
-<meta property="og:description" content="נא מלאו את הפרטים ונחזור אליכם בהקדם האפשרי" />
-<meta property="twitter:description" content="נא מלאו את הפרטים ונחזור אליכם בהקדם האפשרי" />
+<meta name="description" content="To contact us, please fill out the form below." />
+<meta property="og:description" content="To contact us, please fill out the form below." />
+<meta property="twitter:description" content="To contact us, please fill out the form below." />
 
 
 </head>
@@ -150,8 +150,23 @@
 </header><main class="flex-grow">
 <div class="mx-auto my-10 max-w-6xl">
   <div class="mx-3 col-span-3 lg:col-span-2 px-2">
-    <h1 class="title text-5xl mb-4"></h1>
-    <div class="content prose md:prose-lg lg:prose-xl max-w-none py-1"><p><strong>נא מלאו את הפרטים ונחזור אליכם בהקדם האפשרי</strong></p>
+    <h1 class="title text-5xl mb-4">Contact</h1>
+    <div class="content prose md:prose-lg lg:prose-xl max-w-none py-1"><p>To contact us, please fill out the form below.</p>
+<form name="contact" action="https://getform.io/" method="POST">
+    <div class="input">
+        <input type="text" placeholder="שם מלא" name="name" class="p-4 bg-gray-200 border border-gray-200 focus:outline-none focus:bg-white focus:border-gray-500" required>
+    </div>
+    <div class="input">
+        <input type="text" placeholder="אימייל" name="mail" class="p-4 bg-gray-200 border border-gray-200 focus:outline-none focus:bg-white focus:border-gray-500" required>
+    </div>
+    <div class="input">
+        <input type="text" placeholder="נושא" name="title" class="p-4 bg-gray-200 border border-gray-200 focus:outline-none focus:bg-white focus:border-gray-500" required>
+    </div>
+    <div class="input">
+        <textarea rows="5" cols="30" placeholder="תוכן ההודעה" name="message" class="p-4 bg-gray-200 border border-gray-200 focus:outline-none focus:bg-white focus:border-gray-500" required></textarea>
+    </div>
+    <input type="submit" value="שלח" class="px-8 py-2 duration-200 bg-gray-800 text-white cursor-pointer transition-colors hover:bg-gray-400">
+</form>
 </div>
   </div>
 </div>
